--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div class="center text-big bold">
             Hi! I am your webapp.
             <h2>"This is my first page"</h2>
+            <h3>"we have edited this in terminal"</h3>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
