[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
             <h2>"This is my first page"</h2>
             <h3>"we have edited this in terminal today afternoon"</h3>
         </div>
+        <script>
+          alert('Hi,I am your Javascript')
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
