--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id='main-text' class="center text-big bold">
             Hi! I am your webapp.
             <h2>"This is my first page"</h2>
             <h3>"we have edited this in terminal today afternoon"</h3>
